--- a/src/app.module.css
+++ b/src/app.module.css
@@ -11,9 +11,9 @@
   flex: 1 1 30%;
 }
 
-@media (max-width: 800px){
+@media screen and (max-width: 800px){
   .content {
-    flex-wrap: wrap;
+    flex-direction: column;
   }
   .detail {
     flex: inherit;
